# check_requirement

./: .gitignore  LICENSE  README.md  check_requirement.py  pyproject.toml
.github/workflows/: python-app.yml
check_requirement/: __init__.py  check_requirement.py  spaCy_rules.py
tests/: check_requirement_test.py
